--- a/COPLAS-MANRIQVE-LaTeX.tex
+++ b/COPLAS-MANRIQVE-LaTeX.tex
@@ -58,11 +58,11 @@
 \hskip0pt
 \vfill
 \begin{flushright}
-	Edición preparada por I. Brachamons Letesmus.
+	Edición preparada por {\fontsize{9}{1}\selectfont I. BRACHAMONS LETESMVS}.
 \end{flushright}
 
 \begin{flushright}
-	Documento compuesto en LuaLaTeX con el paquete Reledmac de Maïeul Rouquette.
+	Documento compuesto en LuaLaTeX con el paquete Reledmac de {\fontsize{9}{11}\selectfont MAÏAEVL ROVQVETTE}.
 \end{flushright}
 \newpage
 %
@@ -78,7 +78,7 @@ Jorge Manrique nació ca. 1440 y falleció en abril de 1479. Una noticia de su f
 
 \comillas{[...] \textit{peleaban los más días con el marqués de Villena e con su gente, e había entre ellos algunos recuentros. En uno de los quales, el capitán don Jorge Manrique se metió con tanta osadía entres los enemigos que, por no ser visto de los suyos para que fuera socorrido, le firieron de muchos colpes, e murió peleando cerca d las puertas del castillo de Garcimuñoz, donde acaeció aquella pelea, en la qual murieron algunos escuderos e peones de la una e la otra parte.}}\footnoteE{[De la guerra que se fizo contra el marqués de Villena en Escalona y en el Marquesado]. En la ed. de Carriazo, aquí utilizada, vol. I, se ubica en la pág. 358; en la \textit{editio princeps}, atribuida a Nebrija, de 1565, en el cap. C, f. 120\tsup{r.}; en la ed. de 1780 [Valencia], en \comillas{Segunda parte}, cap. LXXXII, pág. 146.}\vspace{5pt}
 
-Las \textit{Coplas por la muerte de su padre} son una \comillas{colección} de coplas escritas y dedicadas a don Rodrigo Manrique, padre del autor y maestre de la Orden de Santiago, hacia finales de 1476, tras su fallecimiento. El texto presenta una figura ensalzada del maestre como victorioso guerrero que \comillas{\textit{fizo guerras a moros}} [\textit{bellator}], hombre virtuoso y católico honrado, detalles apreciables con claridad, puesto que separa la vivencia en la \textit{fama} de la \textit{terrenal} y la \textit{trascendente}. Utiliza la \comillas{copla de pie quebrado} --tres octosílabos y un tetrasílabo--, lenguaje llano y culto, rimas consonantes y posee erudición histórica, filosófica y teológica.
+Las \textit{Coplas por la muerte de su padre} son una \comillas{colección} de coplas compuestas y dedicadas a don Rodrigo Manrique, padre del autor y maestre de la Orden de Santiago, hacia finales de 1476, tras su fallecimiento. El texto presenta una figura ensalzada del maestre como victorioso guerrero que \comillas{\textit{fizo guerras a moros}} [\textit{bellator}], hombre virtuoso y católico honrado, detalles apreciables con claridad, puesto que separa la vivencia en la \textit{fama} de la \textit{terrenal} y la \textit{trascendente}. Utiliza la \comillas{copla de pie quebrado} o \comillas{sextina manriqueña} --cuatro octosílabos y dos tetrasílabos con rimas consonantes--, lenguaje llano y culto, y posee erudición histórica, filosófica y teológica.
 
 El título, \textit{Coplas por la muerte de su padre}, resulta un tanto arbitrario si se analizan las rúbricas que la tradición textual transmitió: los testimonios transmitieron \comillas{dezir} [\textit{82*JM}], \comillas{coplas} [\textit{LB3}, \textit{HH1}, \textit{83*IM}] y algún otro \comillas{De don jorge manrique} [\textit{86*RL}]. Parece evidente, pues, que el título no es reconstruible, porque todos aquellos indican que está \comillas{tercerizado} y, además, hace referencia a la escructura formal de la composición; y aunque por mayoría se prefiere \comillas{coplas}, como puede observarse desde la edición de \textcite{Foulché-Delbosc1902} hasta \textcite{Beltrán2013}, no resulta sensato sostener que aquel, en sus variantes, es el título propiamente de la \comillas{colección}. Es probable que, como algunos textos medievales, este no se haya concebido con un título como tal.
 
@@ -166,6 +166,9 @@ Criterios de presentación gráfica\footnoteE{Las modificaciones no aplican al a
 \item \textit{⁊} = se interpreta por \textit{e}.%
 \end{itemize}
 %
+
+Se sangran las líneas iniciales de cada sextina para indicar cada copla de la copla mayor.
+
 Las contracciones se separan sin indicación alguna. Las grafías en cursiva corresponden, casi sin excepción, a siglas en \textit{LB3}, que se desarrollaron según usos del copista; también cuando se adopten lecciones de \textit{HH1} o de algún testimonio impreso.
 
 El orden de las coplas que se sigue es el de \textit{LB3} que, a su vez, coincide con el orden y conclusiones de \textcite{Senabre1983}, \textcite{Palumbo1983}, \textcite{Orduna1967}, \textcite{Beltrán1991,Beltrán2013}, \textcite{PérezPriego1990,PérezPriego2017} y la 1ª edición crítica \parencite{Foulché-Delbosc1902}, descartando así el orden de \textit{82*JM}, quizá la \textit{editio princeps}.
@@ -187,7 +190,7 @@ Constituyen al aparato crítico el orden y rúbricas en los testimonios, el apar
 
 \subsection*{\fontsize{9.5}{12}\selectfont SIGLA TESTIMONIORVM}
 \addcontentsline{toc}{subsection}{Sigla testimoniorum}
-\vspace*{-6pt}
+\vspace*{-5pt}
 \begin{itemize}[label=,leftmargin=0.6cm]%
 \item \textit{LB3} = \textit{Cancionero de Egerton}, 1470?-1480?
 \item \textit{82*JM} = \textit{Vita Christi por Fray Íñigo de Mendoza}, ca. 1480-1484.
@@ -199,7 +202,7 @@ Constituyen al aparato crítico el orden y rúbricas en los testimonios, el apar
 
 \subsection*{\fontsize{9.5}{12}\selectfont SIGLA APPARATI CRITICI}
 \addcontentsline{toc}{subsection}{Sigla apparati critici}
-\vspace*{-6pt}
+\vspace*{-5pt}
 \begin{itemize}[label=,leftmargin=0.6cm]%
 \item \textit{a. corr.} = ante correctionem [antes de la corrección].
 \item \textit{gl.} = glossa.
@@ -228,7 +231,7 @@ avive el seso y despierte\\
 contenplando\\
 cómo se pasa la vida,\\
 cómo se viene la muerte\\
-tan callando;\\
+tan callando;\par
 q\textit{uá}nd presto se va el plazer,\\
 cómo después de acordado\\
 da dolor,\\
@@ -246,7 +249,7 @@ cómo en un pu\textit{n}to \edtext{se}{\Afootnote{\textit{om. 83*IM}}} es ido\\
 y acabado,\\
 si judgamos sabiamente,\\
 daremos lo no venido\\
-por pasado.\\
+por pasado.\par
 No se engañe nadie, no,\\
 pensando que ha de d\textit{e} durar\\ 
 lo que espera,\\
@@ -264,7 +267,7 @@ que van a dar en la mar\\
 que es el morir;\\
 allí van los señoríos\\
 derechos a se acabar\\
-y consumir.\\
+y consumir.\par
 Allí los ríos cabdales,\\
 allí los otros, medianos,\\
 y más chicos,\\
@@ -282,7 +285,7 @@ de los famosos poetas\\
 y oradores;\\
 no \edtext{curo}{\Afootnote{cureys \textit{LB3}}} de sus \edtext{ficçiones}{\Afootnote{afficciones \textit{82*JM}}},\\
 \edtext{que traen}{\Afootnote{porque traen \textit{HH1}}} yervas secretas\\
-sus sabores.\\
+sus sabores.\par
 Aquel solo me encomie\textit{n}do,\\
 aq\textit{ue}l solo invoco yo \edtext{}{\Afootnote[nosep]{de verdat \textit{a. corr. LB3}}}\\
 de verdad\footnoteE{En \textit{LB3} se redactó \comillas{[de ver] dat} luego de \comillas{ynuoco yo}. Quizá el redactor inicial --o un secundario [\textit{cfr. gl.} XL]-- tachó el fragmento por la errónea ubicación y corrigió \comillas{de verdad} en un pequeño espacio entre los vv. 44 y 46. Puesto que se modificó \textit{verdat} por \textit{verdad} en la corrección, para la fijación se reemplazó \textit{t} en \textit{deydat} por \textit{d} para conservar la rima.} \edtext{}{\Afootnote[nosep]{\textit{p. corr. LB3}}},\\
@@ -300,7 +303,7 @@ para el otro, que es morada\\
 sin pesar,\\
 mas cunple tener bue\textit{n} tino\\
 para andar \edtext{esta jornada}{\Afootnote{este camino \textit{82*JM}}}\\
-sin errar.\\
+sin errar.\par
 Partimos q\textit{ua}ndo nasçemos,\\
 andamos \edtext{q\textit{ua}ndo}{\Afootnote{mientra \textit{δ}; qua\textit{n}to \textit{HH1}}} bivimos\\
 y \edtext{llegamos}{\Afootnote{allegamos \textit{83*IM}}}\\
@@ -318,7 +321,7 @@ si bie\textit{n} \edtext{usásemos}{\lemma{vsasemos}\Afootnote{vsamos \textit{HH
 como devemos,\\
 porque segu\textit{n}d n\textit{uest}ra fe,\\
 es para ganar aquel\\
-que atendemos;\\
+que atendemos;\par
 \edtext{y}{\Afootnote{\textit{om. 86*RL}}} aun aq\textit{ue}l fijo de Dios,\\
 para sobirnos al çielo\\
 desçendió\\
@@ -336,7 +339,7 @@ Si fuese en n\textit{uest}ro poder\\
 corporal\\
 como podemos fazer\\
 al \edtext{ánima}{\lemma{anima}\Afootnote{alma \textit{86*RL}, \textit{HH1}}} \edtext{glorïosa}{\lemma{gloriosa}\Afootnote{tan gloriosa \textit{86*RL}, \textit{HH1}}}\\
-angelical,\\
+angelical,\par
 ¡qué dilige\textit{n}çia ta\textit{n} biva\\
 \edtext{toviéramos}{\lemma{touieramos}\Afootnote{terniamos \textit{82*JM}}} toda ora\\
 y tan presta\\
@@ -354,7 +357,7 @@ son las cosas tras q\textit{ue} andamos\\
 y corremos\\
 que, en este mu\textit{n}do traidor,\\
 \edtext{aun}{\lemma{avn}\Afootnote{cavn \textit{HH1}}} p\textit{ri}m\textit{er}o que muramos\\
-las perdemos:\\
+las perdemos:\par
 de ellas desfaze la hedad,\\
 de ellas, casos desastrados\\
 q\textit{ue} \edtext{acaesçen}{\Afootnote{contecen \textit{83*IM}}},\\
@@ -372,7 +375,7 @@ la gentil frescura y tez\\
 de la cara,\\
 la color y la blancura,\\
 q\textit{ua}ndo viene la vejez,\\
-¿quál se para?\\
+¿quál se para?\par
 Las \edtext{mañas}{\Afootnote{manos \textit{82*JM}; maneras \textit{86*RL}}} y ligereza\\
 y la fuerça corporal\\
 de joventud,\\
@@ -390,7 +393,7 @@ y el linaje y la nobleza\\
 tan creçida,\\
 ¡por q\textit{uá}ntas vías y modos\\
 se sume su grande alteza\\
-en esta vida!\\
+en esta vida!\par
 Unos, por poco \edtext{valer}{\Afootnote{valor \textit{HH1}}},\\
 ¡por q\textit{uá}nd \edtext{baxos}{\Afootnote{varios \textit{82*JM}; baros \textit{86*RL}}} y abatidos\\
 que los tiene\textit{n}!\\
@@ -408,7 +411,7 @@ que nos \edtext{dexen}{\Afootnote{dexan \textit{82*JM}}} a deshora,\\
 ¿quié\textit{n} \edtext{lo}{\Afootnote{\textit{om. LB3}}} dubda?\\
 \edtext{No}{\lemma{no}\Afootnote{nos \textit{86*RL}}} les pidamos \edtext{firmeza}{\Afootnote{firmezas \textit{82*JM}, \textit{HH1}}},\\
 \edtext{pues que}{\Afootnote{por que \textit{82*JM}}} son de una señora\\
-que se muda:\\
+que se muda:\par
 que bienes son de Fortuna\\
 que \edtext{rebuelve}{\lemma{rebuelue}\Afootnote{rebueluen \textit{δ}}} co\textit{n} su rueda\\
 presurosa,\\
@@ -421,13 +424,13 @@ en una cosa.
 	[XII]\footnoteA{[XII] XI en \textit{82*JM}, \textit{86*RL}.}
 \end{center}
 \pstart
-\edtext{Y pues}{\lemma{y pues}\Afootnote{pero \textit{δ}, \textit{ε}, \textit{83*IM}}} digo que \edtext{acompañen}{\Afootnote{aco\textit{n}pañe \textit{LB3}}}\\
+\edtext{Y pues}{\lemma{y pues}\Afootnote{pero \textit{γ}, \textit{83*IM}}} digo que \edtext{acompañen}{\Afootnote{aco\textit{n}pañe \textit{LB3}}}\\
 y \edtext{lleguen}{\Afootnote{llegue \textit{LB3}}} fasta la huesa\\
 co\textit{n} su dueño;\\
-\edtext{por eso}{\Afootnote{por esto \textit{82*JM}; mas por eso \textit{HH1}}} no \edtext{nos engañen}{\Afootnote{nos engañe \textit{LB3}; sengañen \textit{HH1}}}\footnoteE{Se adoptaron las lecciones plurales del texto mayoritario frente a las de número singular --esto es, \comillas{aco\textit{n}pañe}, \comillas{llegue} y \comillas{engañe}-- que porta \textit{LB3}.},\\
+\edtext{por eso}{\Afootnote{por esto \textit{82*JM}; mas por eso \textit{HH1}}} \edtext{no nos engañen}{\Afootnote{no nos engañe \textit{LB3}; no sengañen \textit{HH1}}}\footnoteE{Se adoptaron las lecciones plurales del texto mayoritario frente a las de número singular --esto es, \comillas{aco\textit{n}pañe}, \comillas{llegue} y \comillas{engañe}-- que porta \textit{LB3}.},\\
 pues se va la vida \edtext{apriesa}{\Afootnote{espesa \textit{MN19}}}\\
-como sueño.\\
-\edtext{Y}{\lemma{y}\Afootnote{q\textit{ue HH1}}} los \edtext{plazeres}{\Afootnote{deleytes \textit{δ}, \textit{ε}, \textit{83*IM}}} de acá\\
+como sueño.\par
+\edtext{Y}{\lemma{y}\Afootnote{q\textit{ue HH1}}} los \edtext{plazeres}{\Afootnote{deleytes \textit{γ}, \textit{83*IM}}} de acá\\
 son, en q\textit{ue} nos deleitamos,\\
 tenporales,\\
 y los torme\textit{n}tos de allá,\\
@@ -444,12 +447,12 @@ de esta vida \edtext{trabajada}{\Afootnote{trabajosa \textit{LB3}}}\\
 que tenemos\\
 \edtext{que son}{\Afootnote{no son \textit{86*RL}, \textit{83*IM}}} sino corredores,\\
 y la muerte, la çelada\\
-en que caemos.\\
+en que caemos.\par
 No mirando \edtext{n\textit{uest}ro daño}{\Afootnote{nuestros daños \textit{MN19}}},\\
 corremos a rie\textit{n}da suelta\\
 sin parar;\\
 \edtext{desque}{\Afootnote{cuando \textit{HH1}, \textit{83*IM}}} vemos el engaño,\\
-\edtext{si}{\Afootnote{y \textit{δ}, \textit{ε}, \textit{83*IM}}} queremos dar la buelta\\
+\edtext{si}{\Afootnote{y \textit{γ}, \textit{83*IM}}} queremos dar la buelta\\
 no ay lugar.
 \pend
 
@@ -458,11 +461,12 @@ no ay lugar.
 \end{center}
 \pstart
 Estos reyes poderosos\\
-que \edtext{vemos}{\lemma{veemos}\Afootnote{leemos \textit{82*JM}; vedes \textit{HH1}, \textit{MN19}}} por escrituras\\
+que \edtext{vemos}{\lemma{veemos}\Afootnote{leemos \textit{82*JM}; vedes \textit{ε}}} por escrituras\\
 ya pasadas,\\
 co\textit{n} \edtext{casos tristes}{\Afootnote{talos frjos \textit{86*RL}}}, llorosos,\\
 fuero\textit{n} sus buenas ve\textit{n}turas\\
-\edtext{trastornadas}{\Afootnote{acabadas \textit{HH1}}};\\ así que no ay cosa fuerte,\\
+\edtext{trastornadas}{\Afootnote{acabadas \textit{HH1}}};\par
+así que no ay cosa fuerte,\\
 \edtext{que papas y enperadores}{\Afootnote{reyes papas emperadores \textit{86*RL}; a papas ni emperadores \textit{HH1}; que a papas y emperadores \textit{83*IM}}}\\
 y \edtext{perlados}{\Afootnote{prelados \textit{82*JM}}},\\
 así los trata la muerte\\
@@ -479,7 +483,7 @@ que sus males no los vimos\\
 ni sus glorias;\\
 dexemos a los romanos,\\
 \edtext{aunque leemos y oímos}{\lemma{avn que leemos y oymos}\Afootnote{avn q\textit{ue} oymos y leemos \textit{δ}; aunque oymos y leimos \textit{ε}, \textit{83*IM}}}\\
-\edtext{sus estorias}{\Afootnote{sus victorias \textit{82*JM}, \textit{HH1}, \textit{83*IM}}}.\\
+\edtext{sus estorias}{\Afootnote{sus victorias \textit{82*JM}, \textit{HH1}, \textit{83*IM}}}.\par
 No curemos de saber\\
 lo de aquel \edtext{siglo}{\Afootnote{tie\textit{m}po \textit{HH1}}} pasado\\
 qué fue de ello;\\
@@ -497,7 +501,7 @@ Los infantes de Aragó\textit{n},\\
 ¿qué se fiziero\textit{n}?\\
 ¿Qué fue de ta\textit{n}to galán?\\
 ¿Qué fue de tanta inve\textit{n}çión\\
-como \edtext{traxiero\textit{n}}{\Afootnote{truxieron \textit{δ}, \textit{MN19}}}?\\
+como \edtext{traxiero\textit{n}}{\Afootnote{truxieron \textit{δ}, \textit{MN19}}}?\par
 Las justas y los torneos,\edtext{}{\linenum{|||||189}\Afootnote[nosep]{\hspace*{-0.4em}/190–192 ~\textit{transp. 86*RL}}}\\
 parame\textit{n}tos, bordaduras\\
 y çimeras\\
@@ -515,7 +519,7 @@ sus tocados, sus vestidos,\\
 sus olores?\\
 ¿Qué se fiziero\textit{n} las llamas\\
 de los fuegos ençe\textit{n}didos\\
-\edtext{de amadores}{\Afootnote{de amores \textit{LB3}, \textit{82*JM}}}?\\
+\edtext{de amadores}{\Afootnote{de amores \textit{LB3}, \textit{82*JM}}}?\par
 ¿Qué se fizo aquel trobar,\\
 las músicas acordadas\\
 que tañían?\\
@@ -533,7 +537,7 @@ don Enriq\textit{ue}, ¡q\textit{ué} \edtext{poderes}{\Afootnote{poderoso \text
 alcançava!\\
 ¡Quán blando y q\textit{uá}nd falaguero,\\
 el mu\textit{n}do co\textit{n} sus plazeres\\
-se le dava!\\
+se le dava!\par
 Mas \edtext{verás}{\lemma{veras}\Afootnote{vereys \textit{82*JM}}} q\textit{uá}nd enemigo,\\
 q\textit{uá}nd contrario, q\textit{uá}nd cruel\\
 se le mostró;\\
@@ -551,7 +555,7 @@ los hedefiçios reales\\
 llenos de oro,\\
 las baxillas ta\textit{n} febridas,\\
 los enriques y reales\\
-del thesoro,\\
+del thesoro,\par
 los jaezes, los cavallos\\
 \edtext{de su gente}{\Afootnote{desta gente \textit{82*JM}; de sus gentes \textit{86*RL}; y sus gentes \textit{HH1}}}\edtext{}{\Afootnote[nosep]{\textit{om. MN19}}} y atavíos\\
 ta\textit{n} sobrados\\
@@ -569,7 +573,7 @@ que en su vida suçesor\\
 \edtext{se llamó}{\lemma{se llamo}\Afootnote{le firieron \textit{86*RL}}},\\
 qué corte ta\textit{n} exçelente\\
 tovo, y q\textit{uá}nto gran señor\\
-\edtext{le}{\Afootnote{se \textit{82*JM}}} \edtext{siguió}{\lemma{siguio}\Afootnote{siguieron \textit{86*RL}}};\\
+\edtext{le}{\Afootnote{se \textit{82*JM}}} \edtext{siguió}{\lemma{siguio}\Afootnote{siguieron \textit{86*RL}}};\par
 mas como fuese mortal,\\
 \edtext{metiólo}{\lemma{metiolo}\Afootnote{leuo le \textit{82*JM}; echole \textit{HH1}}} la muerte luego\\
 \edtext{en su}{\Afootnote{en la su \textit{82*JM}}} fragua.\\
@@ -586,8 +590,8 @@ Pues aquel gran Co\textit{n}destable,\\
 \edtext{maestre}{\Afootnote{maestro \textit{82*JM}}} que conosçimos\\
 ta\textit{n} privado,\\
 \edtext{no cunple}{\Afootnote{que cu\textit{m}ple \textit{HH1}}} \edtext{q\textit{ue} de él se fable}{\lemma{q\textit{ue} del se fable}\Afootnote{que mas hable \textit{86*RL}}},\\
-sino sólo \edtext{que lo}{\Afootnote{lo que \textit{82*JM}; mas solo como \textit{86*RL}; saluo solo que \textit{HH1}}} vimos\\
-degollado;\\
+\edtext{sino sólo que lo}{\lemma{sino solo que lo}\Afootnote{sino solo lo que \textit{82*JM}; mas solo como lo \textit{86*RL}; saluo solo que lo \textit{HH1}}} vimos\\
+degollado;\par
 sus infinitos tesoros,\\
 sus villas \edtext{y}{\Afootnote{\textit{om. 86*RL}}} sus lugares,\\
 su ma\textit{n}dar,\\
@@ -605,7 +609,7 @@ maestres ta\textit{n} prosperados\\
 como reyes\\
 que a los \edtext{gra\textit{n}des}{\Afootnote{baxos \textit{HH1}}} y medianos\\
 troxiero\textit{n} tan sojudgados\\
-a sus leyes;\\
+a sus leyes;\par
 \edtext{aquella}{\Afootnote{y su grand \textit{MN19}}} prosperidat\\
 que e\textit{n} ta\textit{n} alto fue sobida\\
 y ensalçada;\\
@@ -623,7 +627,7 @@ tantos marq\textit{ue}ses y co\textit{n}des\\
 y varones\\
 como vimos ta\textit{n} pote\textit{n}tes,\\
 di, Muerte, ¿do los asco\textit{n}des\\
-\edtext{y traspones}{\Afootnote{los pones \textit{82*JM}}}?\\
+\edtext{y traspones}{\Afootnote{los pones \textit{82*JM}}}?\par
 \edtext{Y las sus}{\lemma{y las sus}\Afootnote{y sus muy \textit{83*IM}}} claras hazañas\\
 que fiziero\textit{n} en las guerras\\
 y en las pazes,\\
@@ -641,9 +645,9 @@ los pendones y esta\textit{n}dartes\\
 y vanderas,\\
 los castillos inpunables,\\
 los muros y baluartes\\
-y barreras,\\
+y barreras,\par
 la cava ho\textit{n}da, \edtext{chapada}{\Afootnote{japada \textit{82*JM}}},\\
-\edtext{y}{\Afootnote{o \textit{δ}, \textit{ε}, \textit{83*IM}}} qualquier otro reparo\\
+\edtext{y}{\Afootnote{o \textit{γ}, \textit{83*IM}}} qualquier otro reparo\\
 ¿qué aprovecha?\\
 \edtext{Q\textit{ua}ndo}{\lemma{q\textit{ua}ndo}\Afootnote{que si \textit{ε}, \textit{83*IM}}} tú vienes irada,\\
 todo lo \edtext{pasas}{\Afootnote{lleuas \textit{HH1}}} \edtext{de claro}{\Afootnote{de claro en claro \textit{82*JM}}}\\
@@ -659,7 +663,7 @@ amado por virtuoso\\
 de la gente,\\
 el maestre don Rodrigo\\
 Ma\textit{n}riq\textit{ue}, \edtext{tanto}{\Afootnote{tan \textit{HH1}, \textit{83*IM}}} \edtext{famoso}{\Afootnote{fermoso \textit{82*JM}}},\\
-\edtext{tan}{\Afootnote{y tan \textit{LB3}, \textit{83*IM}}} valiente,\\
+\edtext{tan}{\Afootnote{y tan \textit{LB3}, \textit{83*IM}}} valiente,\par
 sus grandes fechos y \edtext{claros}{\Afootnote{actos \textit{82*JM}}}\\
 no cu\textit{n}ple que los \edtext{alabe}{\Afootnote{acaben \textit{MN19}}},\\
 pues los viero\textit{n},\\
@@ -677,7 +681,7 @@ quales fuero\textit{n}.
 y parientes!\\
 Qué enemigo de enemigos!\\
 ¡Q\textit{ué} \edtext{maestro}{\Afootnote{maestre \textit{LB3}}} de esforçados\\
-y valientes!\\
+y valientes!\par
 Q\textit{ué} seso para discretos!\\
 Qué gr\textit{aci}a para donosos!\\
 ¡Qué razón!\\
@@ -695,7 +699,7 @@ Jullo Çésar en vençer\\
 y batallar;\\
 en la virtud, Africano,\\
 Aníbal en el saber\\
-y trabajar.\\
+y trabajar.\par
 En la bondad, un \edtext{Trajano}{\lemma{trajano}\Afootnote{hatrajano \textit{86*RL}}},\\
 Tito en liberalidad\\
 con alegría;\\
@@ -713,8 +717,8 @@ Antonio \edtext{Pío}{\lemma{pio}\Afootnote{pia \textit{82*JM}}} e\textit{n} cle
 \edtext{y}{\Afootnote{del \textit{δ}, \textit{MN19}, \textit{83*IM}; y bue\textit{n HH1}}} senblante;\\
 \edtext{Adrïano}{\lemma{adriano}\Afootnote{adriapo \textit{86*JM}}} en eloq\textit{ue}nçia,\\
 \edtext{Theodosio}{\lemma{theodosio}\Afootnote{theosio \textit{LB3}; verdosio \textit{86*RL}}} en umanidat\footnoteE{Cuenta con 9 sílabas por las sílabas gramaticales más la aguda \textit{–dad}. Quilis (2009) sostiene que aquello corresponde a una sinéresis en «Theo», leyéndose así «Theo-do-sioen hu-ma-ni-dad».}\\                                                            
-y buen talante.\\
-\edtext{Aurelio Alexandre}{\lemma{aurelio alexandre}\Afootnote{marco alixandre \textit{LB3}; aurelio y alexandre \textit{82*JM}; aurelto alexandre \textit{86*RL}; liandre \textit{HH1}}} fue\\
+y buen talante.\par
+\edtext{Aurelio Alexandre}{\lemma{aurelio alexandre}\Afootnote{marco alixandre \textit{LB3}; aurelio y alexandre \textit{82*JM}; aurelto alexandre \textit{86*RL}; aurelio liandre \textit{HH1}}} fue\\
 en diçiplina y rigor\\
 de la guerra;\\
 \edtext{un}{\Afootnote{\textit{om. LB3}}} Constantino en la fe,\\
@@ -733,7 +737,7 @@ mas fizo \edtext{guerras a moros}{\Afootnote{guerra a los moros \textit{δ}, \te
 \noindent\hspace*{0.5cm}«\textit{En las batallas ⁊ muchos recuentros que ovo con moros ⁊ con christianos este cavallero fue el que, mostrando grand esfuerço a los suyo, fería primero en los contrarios. E las gentes de su conpañía, visto el efuerço de su capitán, todos le seguían ⁊ cobravan osadía de pelear. Tenía tan grand conoscimiento de las cosas del canpo, ⁊ proveí[a]las en tal manera que donde él fue principal capitán nunca puso su gente en logar do se oviese de retraer, porque bolver las espaldas al enemigo era tan ageno que su ánimo que elegía antes de recebir la muerte peleando que salvar la vida huyendo.}\\ 
 \noindent\hspace*{0.5cm}»\textit{Este cavallero osó acometer grandes fazañas. Especialmente escaló una noche la cibdad de Huesca, que es del reino de Granada. E como quier que subiendo el escala los suyos fueron sentidos de los moros, ⁊ fueron algunos derribados del adarve ⁊ feridos en la subida} [...] \textit{subieron el muro peleando ⁊ no fallescieron de sus fuerças defendiéndolo, aunque veían los unos derramar su sangre, los otros caer de la cerca. E de esta manera, matando de los moros ⁊ muriendo de los suyos, este capitán, ferido en el braço de una saeta, peleando entró la cibdad e retroxo los moros fasta que los cercó en la fortaleza.} [...] \textit{Este cavallero duró ⁊ fizo durar a los suyos conbatiendo los moros que tenía cercados, e resistiendo a los moros que le tenía cercado por espacio de dos días, fasta que vino el socorro }[...] \textit{Ganada aquella cibdad, dexado en ella por capitán a un su hermano llamado Gómes Manrrique, ganó otras fortalezas en la comarca. Socorrió muchas vezes algunas cibdades ⁊ villa ⁊ capitanes christianos en tienpo de estrema necesidad. ⁊ fizo tanta guerra en aquellas tierras que en el reino de Granada el nonbre de Rodrigo Ma[n]rrique fue mucho tienpo a los moros grand terror.}»}\\
 gana\textit{n}do sus fortalezas \edtext{}{\Afootnote[nosep]{fortalezas [y villas] \textit{eras. LB3}}}\\
-y sus villas;\\
+y sus villas;\par
 y en las lides que vençió,\\
 \edtext{muchos moros y cavallos}{\Afootnote{quantos moros ⁊ cauallos \textit{86*RL}; muchos caualleros y cauallos \textit{83*IM}}}\\                                      
 se perdiero\textit{n},\\
@@ -750,12 +754,12 @@ Pues \edtext{por su}{\Afootnote{ensu \textit{82*JM}}} ho\textit{n}rra y estado,\
 \edtext{en otros}{\Afootnote{en estos \textit{LB3}}} tie\textit{n}pos pasados,\\
 ¿cómo se \edtext{uvo}{\lemma{vuo}\Afootnote{vio \textit{MN19}}}?\\ Quedando desanparado,\\
 \edtext{con hermanos}{\Afootnote{con sus fijos \textit{LB3}}} y criados\\
-se sostuvo.\\
+se sostuvo.\par
 Después q\textit{ue} fechos famosos\\
 fizo \edtext{en estas dichas guerras}{\Afootnote{en la dicha guerra \textit{82*JM}; en esta misma guerra \textit{86*RL}; en esta dicha guerra \textit{ε}, \textit{83*IM}}}\\
 que fazía,\\
 fizo tratos ta\textit{n} ho\textit{n}rrosos\\
-que le diero\textit{n} \edtext{aún}{\lemma{avn}\Afootnote{muy \textit{83*IM}}} más \edtext{t\textit{ie}rras}{\Afootnote{tierra \textit{δ}, \textit{ε}, \textit{83*IM}}}\\
+que le diero\textit{n} \edtext{aún}{\lemma{avn}\Afootnote{muy \textit{83*IM}}} más \edtext{t\textit{ie}rras}{\Afootnote{tierra \textit{γ}, \textit{83*IM}}}\\
 \edtext{que}{\Afootnote{quel \textit{82*JM}}} tenía.
 \pend
 
@@ -763,12 +767,12 @@ que le diero\textit{n} \edtext{aún}{\lemma{avn}\Afootnote{muy \textit{83*IM}}} 
 	[XXXI]\footnoteA{[XXXI] XIX en \textit{82*JM}.}
 \end{center}
 \pstart
-\edtext{Y}{\lemma{y}\Afootnote{\textit{om. δ}, \textit{ε}, \textit{83*IM}}} estas sus viejas istorias\\
+\edtext{Y}{\lemma{y}\Afootnote{\textit{om. γ}, \textit{83*IM}}} estas sus viejas istorias\\
 que co\textit{n} su braço \edtext{pintó}{\lemma{pinto}\Afootnote{gano \textit{HH1}}}\\
 en \edtext{la}{\Afootnote{\textit{om. 86*RL}, \textit{HH1}}} joventud,\\
 co\textit{n} otras nuevas bitorias,\\
 agora las renovó\\
-en \edtext{la}{\Afootnote{\textit{om. 86*RL}, \textit{HH1}}} senetud\footnoteE{363, \comillas{en la joventud}; 366, \comillas{en la senetud} = ambos pasajes, siguiendo a \textit{LB3} y \textit{82*JM}, son un pentasílabo agudo, esto es, un hexasílabo, incurriendo, evidentemente, en una hipermetría. En este caso, \textit{86*RL} y \textit{HH1} omiten \textit{la}, pero aun así incurren en una hipermetría por ser tetrasílabos agudos, por tanto, pentasílabos. \textcite{Beltrán1991} selecciona \textit{en la juventud}, lección de su testimonio de base, pero en \textcite{Beltrán2013} selecciona \textit{en juventud}, y no ofrece argumentos de su cambio, sino que lo descarta en el aparato crítico. Según Navarro, en los pasajes «irregulares» Manrique aplicó el pentasílabo quebrado «en condiciones de compensación o sinalefa respecto al octosílabo precedente», que fue «meramente potestativa» y que «no la aplicó de manera sistemática» \parencite[175]{Navarro1961}. Aun así, estos dos pasajes parecen ser irresolubles, incluso aplicando esta regla, que solo funciona si se seleccionan las variantes de \textit{86*RL} y \textit{HH1}, esto es, omitir \textit{la}. Resulta complejo cuando otros testimonios no corrigen la hipermetría con sus lecciones. Los lectores podrán elegir cuál variante consideran adecuada, en tanto no sea la de \textit{MN19}, que ya «excede el exceso» con su hexasílabo agudo.};\\
+en \edtext{la}{\Afootnote{\textit{om. 86*RL}, \textit{HH1}}} senetud\footnoteE{363, \comillas{en la joventud}; 366, \comillas{en la senetud} = ambos pasajes, siguiendo a \textit{LB3} y \textit{82*JM}, son un pentasílabo agudo, esto es, un hexasílabo, incurriendo, evidentemente, en una hipermetría. En este caso, \textit{86*RL} y \textit{HH1} omiten \textit{la}, pero aun así incurren en una hipermetría por ser tetrasílabos agudos, por tanto, pentasílabos. \textcite{Beltrán1991} selecciona \textit{en la juventud}, lección de su testimonio de base, pero en \textcite{Beltrán2013} selecciona \textit{en juventud}, y no ofrece argumentos de su cambio, sino que lo descarta en el aparato crítico. Según Navarro, en los pasajes «irregulares» Manrique aplicó el pentasílabo quebrado «en condiciones de compensación o sinalefa respecto al octosílabo precedente», que fue «meramente potestativa» y que «no la aplicó de manera sistemática» \parencite[175]{Navarro1961}. Aun así, estos dos pasajes parecen ser irresolubles, incluso aplicando esta regla, que solo funciona si se seleccionan las variantes de \textit{86*RL} y \textit{HH1}, esto es, omitir \textit{la}. Resulta complejo cuando otros testimonios no corrigen la hipermetría con sus lecciones. Los lectores podrán elegir cuál variante consideran adecuada, en tanto no sea la de \textit{MN19}, que ya «excede el exceso» con su hexasílabo agudo.};\par
 \edtext{por}{\Afootnote{que por \textit{LB3}}} su grand abilidat,\\
 \edtext{por}{\Afootnote{y por \textit{LB3}}} méritos y ançianía\\
 bie\textit{n} gastada,\\
@@ -786,8 +790,8 @@ ocupadas de tiranos\\
 las falló,\\
 mas por çercos y por guerras\\
 y por fuerça de sus manos\\ 
-las \edtext{cobró}{\lemma{cobro}\Afootnote{gano \textit{HH1}}}.\\
-Pues nuestro rey natural,\edtext{}{\linenum{|||||380}\Afootnote[nosep]{\textit{transp. LB3} = \comillas{si de las obras que obro} / \comillas{el nuestro rey natural}}}\\
+las \edtext{cobró}{\lemma{cobro}\Afootnote{gano \textit{HH1}}}.\par
+Pues nuestro rey natural,\edtext{}{\linenum{|||||380}\Afootnote[nosep]{\textit{transp. LB3} = \comillas{si de las obras que obro / el nuestro Rey natural}}}\\
 si de las obras que obró\\
 fue servido,\\
 dígalo el de Portugal,\\
@@ -804,7 +808,7 @@ tantas vezes por su ley\\
 al tablero,\\
 después de ta\textit{n} bie\textit{n} servida\\
 la corona de su rey\\                                                                         
-verdadero,\\
+verdadero,\par
 despu\textit{é}s de ta\textit{n}ta hazaña\\
 a que no puede bastar\\ 
 cuenta çierta,\\
@@ -819,10 +823,10 @@ a su puerta,
 \pstart
 diziendo: «bue\textit{n} cavallero,\\
 dexad el mu\textit{n}do engañoso\\                                                               
-\edtext{sin falago}{\Afootnote{y su [\textit{f}-\textit{h}]alago \textit{δ}, \textit{ε}; con halago \textit{83*IM}}}\footnoteE{Los demás testimonios transmiten «y su [\textit{f}-\textit{h}]alago», que parece tener más sentido, pero que incurre en una hipermetría, porque \textit{h} corresponde a una consonante aspirada o una \textit{f} inicial latina, ya que entre los testimonios alternan \textit{h} [\textit{86*RL}] y \textit{f} [\textit{HH1}, \textit{MN19}], aunque alguno la omite [\textit{82*JM}]; de ser así esto, algo apreciable por la inestabilidad gráfica, la sinalefa no sería posible y, por tanto, sería conveniente adoptar la lección de \textit{LB3}, que es un tetrasílabo. La lección \textit{sin falago} apuntaría --probablemente-- a que don Rodrigo Manrique debería dejar el mundo \comillas{sin atender} o \comillas{seguir su} \textit{falago}, un sentido más o menos similar. Quizá la lección \textit{y su }[\textit{f}-\textit{h}]\textit{alago} incurre en una lectio facilior.};\\
+\edtext{sin falago}{\Afootnote{y su [\textit{f}-\textit{h}]alago \textit{γ}; con halago \textit{83*IM}}}\footnoteE{Los demás testimonios transmiten «y su [\textit{f}-\textit{h}]alago», que parece tener más sentido, pero que incurre en una hipermetría, porque \textit{h} corresponde a una consonante aspirada o una \textit{f} inicial latina, ya que entre los testimonios alternan \textit{h} [\textit{86*RL}] y \textit{f} [\textit{HH1}, \textit{MN19}], aunque alguno la omite [\textit{82*JM}]; de ser así esto, algo apreciable por la inestabilidad gráfica, la sinalefa no sería posible y, por tanto, sería conveniente adoptar la lección de \textit{LB3}, que es un tetrasílabo. La lección \textit{sin falago} apuntaría --probablemente-- a que don Rodrigo Manrique debería dejar el mundo \comillas{sin atender} o \comillas{seguir su} \textit{falago}, un sentido más o menos similar. Quizá la lección \textit{y su }[\textit{f}-\textit{h}]\textit{alago} incurre en una lectio facilior.};\\
 v\textit{uest}ro coraçó\textit{n} de azero\\
 muestre su esfuerço famoso\\ 
-en este trago.\\
+en este trago.\par
 Y pues de vida y de salud\\
 fezistes ta\textit{n} poca cuenta\\     
 por la fama,\\
@@ -840,9 +844,9 @@ la batalla temerosa\\
 que esperáis,\\
 pues otra vida \edtext{más}{\lemma{mas}\Afootnote{tan \textit{LB3}}} larga\\
 \edtext{de fama}{\Afootnote{dela fama \textit{86*RL}}} ta\textit{n} glorïosa\\ 
-acá dexáis;\\
+acá dexáis;\par
 \edtext{que aunque esta vida de honor}{\Afootnote{aun que vida esta de honor \textit{83*IM}}}\\
-\edtext{tanpoco no es}{\Afootnote{no penseis ques \textit{MN19}; es \textit{om. 83*IM}}} eternal\\
+\edtext{tanpoco no es}{\Afootnote{no penseis ques \textit{MN19}; tan poco no \textit{om. 83*IM}}} eternal\\
 \edtext{ni}{\Afootnote{\textit{om. 83*IM}}} \edtext{duradera}{\Afootnote{verdadera \textit{δ}, \textit{MN19}, \textit{83*IM}}},\\
 mas co\textit{n} todo es muy mejor\\
 que la \edtext{otra}{\Afootnote{corona \textit{82*JM}}} \edtext{temporal}{\Afootnote{ynfernal \textit{LB3}; corporal \textit{MN19}}},\\                                                                       
@@ -858,7 +862,7 @@ no se gana co\textit{n} estados\\
 mu\textit{n}danales,\\
 ni co\textit{n} vida deleitable\\
 en que mora\textit{n} los pecados\\
-infernales;\\
+infernales;\par
 \edtext{que los}{\Afootnote{mas los \textit{δ}, \textit{MN19}}} buenos religiosos\\
 \edtext{gánanlo}{\lemma{gananlo}\Afootnote{ganan la \textit{LB3}, \textit{82*JM}; ganan los \textit{86*RL}}} co\textit{n} oraçiones\\                                           
 y con lloros;\\
@@ -876,7 +880,7 @@ tanta sangre derramastes\\
 de paganos,\\
 esperad el gualardó\textit{n}\\
 que en este mu\textit{n}do ganastes\\
-por las manos;\\
+por las manos;\par
 y co\textit{n} esta confiança\\
 y co\textit{n} la fe ta\textit{n} entera\\
 que tenéis,\\
@@ -894,7 +898,7 @@ en esta vida mezq\textit{ui}na\\
 por tal modo,\\
 que mi volu\textit{n}tad está\\
 conforme con la divina\\                                             
-para todo.\\
+para todo.\par
 Y co\textit{n}sie\textit{n}to en mi morir\\
 co\textit{n} voluntad plaze\textit{n}tera,\\  
 clara y pura,\\
@@ -912,7 +916,7 @@ tomaste forma \edtext{çevil}{\lemma{çeuil}\Afootnote{seruil \textit{86*RL}, \t
 y \edtext{baxo}{\Afootnote{\textit{om. 82*JM}}} no\textit{n}bre;\\
 \edtext{Tú, que a tu divinidat}{\lemma{tu que a tu}\Afootnote{juntaste \textit{82*JM}}}\\
 ju\textit{n}taste \edtext{cosa}{\Afootnote{avna cosa \textit{82*JM}}} ta\textit{n} vil\\
-como \edtext{el}{\Afootnote{es el \textit{LB3}, \textit{86*RL}}} onbre;\\
+como \edtext{el}{\Afootnote{es el \textit{LB3}, \textit{86*RL}}} onbre;\par
 Tú, \edtext{que los}{\Afootnote{que tan \textit{δ}, \textit{MN19}, \textit{83*IM}}} gra\textit{n}des torme\textit{n}tos\\
 sofriste sin resiste\textit{n}çia\\
 en tu persona,\\
@@ -929,8 +933,8 @@ Así, co\textit{n} tal ente\textit{n}der\\
 todos sentidos humanos\\
 \edtext{conservados}{\lemma{conseruados}\Afootnote{oluidados \textit{83*IM}}}\footnoteE{«oluidados» pertenece a \textit{83*IM}, testimonio representante del subarquetipo \textit{β}. La elección entre las adiáforas es en extremo compleja porque, siguiendo el \textit{stemma codicum} de \textcite{PérezPriego2017} --y el de Beltrán, en parte--, cada una tiene igual peso en los subarquetipos \textit{α} y \textit{β} por remitir al arquetipo \textit{X}. Cada lección tuvo defensores o «electores»; para la lección \textit{conservados}, \textcite{PérezPriego1990,PérezPriego2017}, \textcite{Conde2009} y \textcite{Gonzalez2019}, y para \textit{olvidados}, su innovador y elector \textcite{Beltrán1991,Beltrán2013,Beltrán2016}. Beltrán escuetamente argumenta en favor de la lección \textit{olvidados} en su edición crítica con el siguiente argumento: «\textit{oluidados} y \textit{conseruados} se reparten en las ramas del \textit{stemma} [...] Prefiero la primera opción, pues \textit{sentido} tiene la acepción "apetito, o parte inferior del hombre" (\textit{Aut.}) reforzado probablemente por el calificativo \textit{humanos}, lo que hace de esta variante un caso evidente de \textit{lectio difficilior}.» \parencite[158]{Beltrán1991}. Tras el comentario de \textcite{Conde2009}, en su edición de 2013, Beltrán le otorga mayor autoridad al \textit{Diccionario de Autoridades} --como diccionario antiguo--, porque refleja «valores arcaicos» y conserva «interpretaciones específicas de las ciencias o el pensamiento antiguo», y porque no es una cuestión puramente léxica, sino de valoración moral --en el vocablo--; y en su extenso estudio del 2016 añade, además, ejemplos textuales de época para justificar la acepción «apetitos». [La lección \textit{conservados} forma parte de la tradición \textit{vulgata} del texto]. \textcite{Conde2009} sostiene, contra Beltrán, que del mismo modo que el editor utiliza la segunda acepción para \textit{sentidos} [apetito], podría utilizar la principal, \textit{potencia}/\textit{facultad} para percibir «las impresiones de los objetos exteriores», y la tercera, \textit{entendimiento}/\textit{razón}, por tanto, no resultaría plausible utilizar la evidencia lexicográfica para adoptar \textit{olvidados} como lección para la \textit{constitutio textus}; y proporciona, además, diferentes testimonios para justificar \textit{conservados} y, de paso, la preeminencia de la 1ª y 3ª acepción en el \textit{Diccionario de Autoridades} para \textit{sentidos}, esto es, \textit{entendimiento}/\textit{razón}. \textcite{PérezPriego2017} sigue a Conde. \textcite{Gonzalez2019} propone que la lección \textit{olvidados} resulta de una trivialización; luego, en su análisis, indica que los \textit{sentidos} no son cinco, sino diez, según la tradición medieval: cinco internos y cinco externos; los externos, los propios de la carne; los internos, siguiendo a Tomás de Aquino [\textit{S. Theol.}, I, q. 78, a. 4] --aquel, a su vez, siguiendo a Avicena y su \textit{De anima}--, son la \textit{sensus communis}, \textit{imaginatio}, \textit{phantasia}, \textit{aestimativa} y \textit{memorativa}. Luego, cita dos textos de autoridades que, con certeza, leyó Manrique: La \comillas{Partida Segunda} de Alfonso X el Sabio [\textit{Siete Partidas}, II, XIII] y la \textit{Coronación del Marqués de Santillana} de Juan de Mena [pp. 90-92 en la edición de Kerkhof]. Siguiendo esas influencias, resulta en una unidad entre \textit{sentidos} y \textit{entendimiento}, y olvidar los \textit{sentidos}, como indica la lección \textit{olvidados}, implicaría en quebrar tal unidad al \comillas{deshacerse} de ambas; y al tratarse de una unidad --siguiendo la evidencia proporcionada acerca de las \textit{ars moriendi} y la tradición--, la lección, como se estudia en ecdótica, no puede ir contra el propio autor.\\ \noindent\hspace*{0.5cm} Puede concluirse que Rodrigo Manrique fallece conservando facultades físicas y psicológicas [\textit{sentidos} y  \textit{entendimiento}], y que fallece en una «recta ley», ejerciendo los deberes propios que le corresponden como \textit{bellator}, esto es, «guerreando» \parencite[52-55]{Gonzalez2019}. La evidencia histórica y la reconstrucción del \textit{contextus} se inclinan hacia la lección \textit{conservados}.}\\
 çercado de su muger\\
-\edtext{}{\linenum{|||||480}\Afootnote[nosep]{\textit{sec. m. LB3}}}\edtext{y de sus fijos y hermanos}{\Afootnote{de sus hijos y ermanos \textit{LB3}; y de fijos y de ermanos \textit{82*JM}, \textit{83*IM}}}\\                                                                 
-y criados,\\
+\edtext{}{\linenum{|||||480}\Afootnote[nosep]{\textit{sec. m. LB3}}}\edtext{y de sus fijos y hermanos}{\Afootnote{de sus hijos y ermanos \textit{LB3}; y de fijos y de ermanos \textit{82*JM}, \textit{83*IM}}}\\                                                        
+y criados,\par
 dio el alma a quien \edtext{ge la dio}{\lemma{geladio}\Afootnote{gloria dio \textit{LB3}}},\\
 el qual \edtext{la ponga}{\lemma{laponga}\Afootnote{ladio \textit{86*RL}}} en el cielo\\
 y en su gloria;\\
@@ -957,7 +961,7 @@ Coplas apócrifas o póstumas en la \textit{Glosa Famossisima} de Alonso de Cerv
 		y nunca buena,\\
 		lo de en medio trabajoso,\\
 		a quien das vida mas larga\\
-		le das pena;\\
+		le das pena;\par
 		anse los bienes muriendo,\\
 		y con sudor se procuran\\
 		y los das,\\
@@ -975,7 +979,7 @@ Coplas apócrifas o póstumas en la \textit{Glosa Famossisima} de Alonso de Cerv
 		toda vida,\\
 		mas segun aca nos tratas,\\
 		lo mejor y menos triste\\
-		es la partida\\
+		es la partida\par
 		de tu vida tan cubierta\\
 		de males, y de dolores\\
 		tan poblada,\\
